--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #0c1526;
+}
+
 .container{
     background-color: #60dd9a;
     width: 90%;
@@ -141,5 +145,6 @@ h5{
 #demo{
     text-align:center;
     margin-top:10px;
+    color: #dde5f0;
 }
     
